clase complementaria 2 tasks

--- a/clase4/package.json
+++ b/clase4/package.json
@@ -16,7 +16,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.1"
+    "@expo/metro-runtime": "~3.1.1",
+    "expo-font": "~11.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
