--- a/clase11-contador/package.json
+++ b/clase11-contador/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.5",
     "expo-font": "^11.10.2",
     "expo-status-bar": "~1.11.1",
@@ -21,7 +22,8 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
