--- a/clase18/app.json
+++ b/clase18/app.json
@@ -20,10 +20,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.maxirosanda.clase6"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ec66e985-fd64-4b1b-93f9-4ddf6157fb9b"
+      }
     }
   }
 }
